iOS: Added Queue view. Static for now, still have a few bugs to fix in the presentation of the view over the tab bar controller.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -369,5 +369,8 @@
     <Compile Include="Config\Models\GeneralAppConfig.cs" />
     <Compile Include="Messages\MarkerPositionUpdatedMessage.cs" />
     <Compile Include="Messages\MarkerActivatedMessage.cs" />
+    <Compile Include="Views\IQueueView.cs" />
+    <Compile Include="Presenters\Interfaces\IQueuePresenter.cs" />
+    <Compile Include="Presenters\QueuePresenter.cs" />
   </ItemGroup>
 </Project>
