--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Printing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
