iOS: Queue view is now updated when adding/removing items. Adding/removing items from queue now works properly. The queue can be played or closed and reactivated. There are still a few bugs but so far it's working good.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -372,5 +372,6 @@
     <Compile Include="Views\IQueueView.cs" />
     <Compile Include="Presenters\Interfaces\IQueuePresenter.cs" />
     <Compile Include="Presenters\QueuePresenter.cs" />
+    <Compile Include="Messages\QueueUpdatedMessage.cs" />
   </ItemGroup>
 </Project>
