--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -146,6 +146,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Theme\GlobalTheme.cs" />
+    <Compile Include="Classes\Controls\OutputMeter.cs" />
     <Compile Include="Classes\Controls\MPfmButton.cs" />
     <Compile Include="Classes\Controls\MPfmTreeViewItem.cs" />
     <Compile Include="Classes\Converters\LibraryBrowserImagePathConverter.cs" />
