WPF: Added Fader control based on older Windows Forms Fader control. Most of the code has been converted but there are still a few bugs to fix (i.e.e mouse events outside control) and definitive colors to assign.

--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -146,6 +146,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Controls\Fader.cs" />
+    <Compile Include="Classes\Extensions\ExtensionMethods.cs" />
     <Compile Include="Classes\Theme\GlobalTheme.cs" />
     <Compile Include="Classes\Controls\OutputMeter.cs" />
     <Compile Include="Classes\Controls\MPfmButton.cs" />
