WPF: Added TrackBar control based on older TrackBar control for Windows Forms.

--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -146,6 +146,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Controls\TrackBar.cs" />
     <Compile Include="Classes\Controls\Fader.cs" />
     <Compile Include="Classes\Extensions\ExtensionMethods.cs" />
     <Compile Include="Classes\Theme\GlobalTheme.cs" />
