--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D536FDE5-989E-4979-9B39-63621AE4A205}</ProjectGuid>
+    <ProjectGuid>{F2A4E954-0439-42CF-B795-82819C9A39CF}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MPfm.Core</RootNamespace>
-    <AssemblyName>MPfm.Core</AssemblyName>
+    <RootNamespace>MPfm.GenericControls</RootNamespace>
+    <AssemblyName>MPfm.GenericControls</AssemblyName>
     <SccProjectName>Svn</SccProjectName>
     <SccLocalPath>Svn</SccLocalPath>
     <SccAuxPath>Svn</SccAuxPath>
@@ -139,36 +139,28 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="TinyIoC">
-      <HintPath>Lib\iOS\TinyIoC.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Content Include="Lib\PCL\TinyIoC.dll" />
-    <Content Include="Lib\TinyIoC.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Lib\iOS\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Lib\iOS\TinyIoC.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Conversion.cs" />
-    <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
-    <Compile Include="DatabaseFieldMap.cs" />
-    <Compile Include="Extensions\DictionaryExtension.cs" />
+    <Compile Include="Basics\BasicRectangle.cs" />
+    <Compile Include="Basics\BasicColor.cs" />
+    <Compile Include="Basics\BasicBrush.cs" />
+    <Compile Include="Basics\BasicPen.cs" />
+    <Compile Include="Basics\BasicPoint.cs" />
+    <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Controls\IControl.cs" />
+    <Compile Include="Controls\OutputMeterControl.cs" />
+    <Compile Include="Graphics\IGraphicsContext.cs" />
+    <Compile Include="Interaction\IControlInteraction.cs" />
+    <Compile Include="Interaction\IControlTouchInteraction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tracing.cs" />
-    <Compile Include="OS.cs" />
-    <Compile Include="CacheStore.cs" />
-    <Compile Include="ByteArrayQueue.cs" />
-    <Compile Include="Normalizer.cs" />
-    <Compile Include="Helpers\XMLHelper.cs" />
-    <Compile Include="Network\IPAddressRangeFinder.cs" />
-    <Compile Include="Network\WebClientTimeout.cs" />
-    <Compile Include="XmlSerialization.cs" />
-    <Compile Include="Helpers\PathHelper.cs" />
+    <Compile Include="Theme\ITheme.cs" />
+    <Compile Include="Theme\GenericTheme.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.iOS.csproj">
+      <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
+      <Name>MPfm.Sound.iOS</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
