Android: Updated project after changes on other platforms.

--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -145,12 +145,15 @@
     <Compile Include="Messages\ApplicationCloseMessage.cs" />
     <Compile Include="Messages\ActivateLockScreenMessage.cs" />
     <Compile Include="Messages\EqualizerPresetSelectedMessage.cs" />
+    <Compile Include="Messages\MarkerActivatedMessage.cs" />
+    <Compile Include="Messages\MarkerPositionUpdatedMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserPopBackstackMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserChangeQueryMessage.cs" />
     <Compile Include="Messages\PlaylistUpdatedMessage.cs" />
     <Compile Include="Messages\PlaylistListUpdatedMessage.cs" />
     <Compile Include="Messages\PlayerSetPositionMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserItemClickedMessage.cs" />
+    <Compile Include="Messages\QueueUpdatedMessage.cs" />
     <Compile Include="Models\CloudConnectEntity.cs" />
     <Compile Include="Models\CloudPreferencesStateEntity.cs" />
     <Compile Include="Models\FolderEntity.cs" />
@@ -165,12 +168,14 @@
     <Compile Include="Presenters\CloudConnectPresenter.cs" />
     <Compile Include="Presenters\CloudPreferencesPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IMobileMainPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\IQueuePresenter.cs" />
     <Compile Include="Presenters\MobileMainPresenter.cs" />
     <Compile Include="Presenters\FirstRunPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IFirstRunPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ICloudConnectPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ICloudPreferencesPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IStartResumePlaybackPresenter.cs" />
+    <Compile Include="Presenters\QueuePresenter.cs" />
     <Compile Include="Presenters\StartResumePlaybackPresenter.cs" />
     <Compile Include="Presenters\SyncConnectManualPresenter.cs" />
     <Compile Include="Presenters\ResumePlaybackPresenter.cs" />
@@ -201,6 +206,7 @@
     <Compile Include="Views\IFirstRunView.cs" />
     <Compile Include="Views\ICloudConnectView.cs" />
     <Compile Include="Views\ICloudPreferencesView.cs" />
+    <Compile Include="Views\IQueueView.cs" />
     <Compile Include="Views\IResumePlaybackView.cs" />
     <Compile Include="Views\IStartResumePlaybackView.cs" />
     <Compile Include="Views\ISyncConnectManualView.cs" />
