--- a/MPfm/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/MPfm.Android/MPfm.Android.csproj
@@ -341,6 +341,10 @@
       <Project>{D536FDE5-989E-4979-9B39-63621AE4A205}</Project>
       <Name>MPfm.Core.Android</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MPfm.GenericControls\MPfm.GenericControls.Android.csproj">
+      <Project>{f2a4e954-0439-42cf-b795-82819c9a39cf}</Project>
+      <Name>MPfm.GenericControls.Android</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MPfm.Library\MPfm.Library.Android.csproj">
       <Project>{2A62D229-D7FC-41DA-B676-BB1371659BFB}</Project>
       <Name>MPfm.Library.Android</Name>
