--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.Android.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.Android.csproj
@@ -103,4 +103,10 @@
     <Compile Include="Theme\ITheme.cs" />
     <Compile Include="Theme\GenericTheme.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.Android.csproj">
+      <Project>{d92f718e-9a24-4b8b-9e40-77f93cf89eae}</Project>
+      <Name>MPfm.Sound.Android</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
