--- a/MPfm/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.csproj
@@ -70,22 +70,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Common.Logging, Version=2.0.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\Common.Logging.dll</HintPath>
-    </Reference>
-    <Reference Include="Spring.Rest, Version=1.1.1.35071, Culture=neutral, PublicKeyToken=65e474d141e25e07, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\Spring.Rest.dll</HintPath>
-    </Reference>
-    <Reference Include="Spring.Social.Core, Version=1.0.1.35171, Culture=neutral, PublicKeyToken=65e474d141e25e07, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\Spring.Social.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Spring.Social.Dropbox, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\Spring.Social.Dropbox.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
@@ -113,6 +97,18 @@
     </Reference>
     <Reference Include="TinyIoC">
       <HintPath>..\MPfm.Core\Lib\TinyIoC.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging">
+      <HintPath>Lib\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Spring.Rest">
+      <HintPath>Lib\Spring.Rest.dll</HintPath>
+    </Reference>
+    <Reference Include="Spring.Social.Core">
+      <HintPath>Lib\Spring.Social.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Spring.Social.Dropbox">
+      <HintPath>Lib\Spring.Social.Dropbox.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
