--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Basics\BasicPen.cs" />
     <Compile Include="Basics\BasicPoint.cs" />
     <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Controls\FaderControl.cs" />
     <Compile Include="Controls\IControl.cs" />
     <Compile Include="Controls\OutputMeterControl.cs" />
     <Compile Include="Graphics\IGraphicsContext.cs" />
