--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.PCL.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.PCL.csproj
@@ -32,22 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Basics\BasicRectangle.cs" />
-    <Compile Include="Basics\BasicColor.cs" />
-    <Compile Include="Basics\BasicBrush.cs" />
-    <Compile Include="Basics\BasicPen.cs" />
-    <Compile Include="Basics\BasicPoint.cs" />
-    <Compile Include="Basics\BasicGradientBrush.cs" />
-    <Compile Include="Controls\IControl.cs" />
-    <Compile Include="Controls\OutputMeterControl.cs" />
-    <Compile Include="Graphics\IGraphicsContext.cs" />
-    <Compile Include="Interaction\IControlInteraction.cs" />
-    <Compile Include="Interaction\IControlTouchInteraction.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Theme\ITheme.cs" />
-    <Compile Include="Theme\GenericTheme.cs" />
-  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -56,4 +40,29 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Compile Include="Basics\BasicRectangle.cs" />
+    <Compile Include="Basics\BasicColor.cs" />
+    <Compile Include="Basics\BasicBrush.cs" />
+    <Compile Include="Basics\BasicPen.cs" />
+    <Compile Include="Basics\BasicPoint.cs" />
+    <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Controls\WaveFormScaleControl.cs" />
+    <Compile Include="Controls\FaderControl.cs" />
+    <Compile Include="Controls\IControl.cs" />
+    <Compile Include="Controls\OutputMeterControl.cs" />
+    <Compile Include="Graphics\IMemoryGraphicsContext.cs" />
+    <Compile Include="Graphics\IGraphicsContext.cs" />
+    <Compile Include="Graphics\IMemoryGraphicsContextFactory.cs" />
+    <Compile Include="Interaction\IControlInteraction.cs" />
+    <Compile Include="Interaction\IControlTouchInteraction.cs" />
+    <Compile Include="Managers\Events\LoadPeakFileEventArgs.cs" />
+    <Compile Include="Managers\Events\GenerateWaveFormEventArgs.cs" />
+    <Compile Include="Managers\Events\GeneratePeakFileEventArgs.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Managers\WaveFormCacheManager.cs" />
+    <Compile Include="Renderers\IRenderer.cs" />
+    <Compile Include="Theme\ITheme.cs" />
+    <Compile Include="Theme\GenericTheme.cs" />
+  </ItemGroup>
 </Project>
