--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.WindowsPhone.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.WindowsPhone.csproj
@@ -112,22 +112,6 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Basics\BasicRectangle.cs" />
-    <Compile Include="Basics\BasicColor.cs" />
-    <Compile Include="Basics\BasicBrush.cs" />
-    <Compile Include="Basics\BasicPen.cs" />
-    <Compile Include="Basics\BasicPoint.cs" />
-    <Compile Include="Basics\BasicGradientBrush.cs" />
-    <Compile Include="Controls\IControl.cs" />
-    <Compile Include="Controls\OutputMeterControl.cs" />
-    <Compile Include="Graphics\IGraphicsContext.cs" />
-    <Compile Include="Interaction\IControlInteraction.cs" />
-    <Compile Include="Interaction\IControlTouchInteraction.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Theme\ITheme.cs" />
-    <Compile Include="Theme\GenericTheme.cs" />
-  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <ProjectExtensions />
@@ -138,4 +122,29 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Compile Include="Basics\BasicRectangle.cs" />
+    <Compile Include="Basics\BasicColor.cs" />
+    <Compile Include="Basics\BasicBrush.cs" />
+    <Compile Include="Basics\BasicPen.cs" />
+    <Compile Include="Basics\BasicPoint.cs" />
+    <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Controls\WaveFormScaleControl.cs" />
+    <Compile Include="Controls\FaderControl.cs" />
+    <Compile Include="Controls\IControl.cs" />
+    <Compile Include="Controls\OutputMeterControl.cs" />
+    <Compile Include="Graphics\IMemoryGraphicsContext.cs" />
+    <Compile Include="Graphics\IGraphicsContext.cs" />
+    <Compile Include="Graphics\IMemoryGraphicsContextFactory.cs" />
+    <Compile Include="Interaction\IControlInteraction.cs" />
+    <Compile Include="Interaction\IControlTouchInteraction.cs" />
+    <Compile Include="Managers\Events\LoadPeakFileEventArgs.cs" />
+    <Compile Include="Managers\Events\GenerateWaveFormEventArgs.cs" />
+    <Compile Include="Managers\Events\GeneratePeakFileEventArgs.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Managers\WaveFormCacheManager.cs" />
+    <Compile Include="Renderers\IRenderer.cs" />
+    <Compile Include="Theme\ITheme.cs" />
+    <Compile Include="Theme\GenericTheme.cs" />
+  </ItemGroup>
 </Project>
