--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
@@ -142,25 +142,34 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.iOS.csproj">
+      <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
+      <Name>MPfm.Sound.iOS</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Basics\BasicRectangle.cs" />
     <Compile Include="Basics\BasicColor.cs" />
     <Compile Include="Basics\BasicBrush.cs" />
     <Compile Include="Basics\BasicPen.cs" />
     <Compile Include="Basics\BasicPoint.cs" />
     <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Controls\WaveFormScaleControl.cs" />
+    <Compile Include="Controls\FaderControl.cs" />
     <Compile Include="Controls\IControl.cs" />
     <Compile Include="Controls\OutputMeterControl.cs" />
+    <Compile Include="Graphics\IMemoryGraphicsContext.cs" />
     <Compile Include="Graphics\IGraphicsContext.cs" />
+    <Compile Include="Graphics\IMemoryGraphicsContextFactory.cs" />
     <Compile Include="Interaction\IControlInteraction.cs" />
     <Compile Include="Interaction\IControlTouchInteraction.cs" />
+    <Compile Include="Managers\Events\LoadPeakFileEventArgs.cs" />
+    <Compile Include="Managers\Events\GenerateWaveFormEventArgs.cs" />
+    <Compile Include="Managers\Events\GeneratePeakFileEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Managers\WaveFormCacheManager.cs" />
+    <Compile Include="Renderers\IRenderer.cs" />
     <Compile Include="Theme\ITheme.cs" />
     <Compile Include="Theme\GenericTheme.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.iOS.csproj">
-      <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
-      <Name>MPfm.Sound.iOS</Name>
-    </ProjectReference>
   </ItemGroup>
 </Project>
