iOS: Updated project after changes on other platforms.

--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.iOS.csproj
@@ -146,6 +146,10 @@
       <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
       <Name>MPfm.Sound.iOS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MPfm.Core\MPfm.Core.iOS.csproj">
+      <Project>{D536FDE5-989E-4979-9B39-63621AE4A205}</Project>
+      <Name>MPfm.Core.iOS</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Basics\BasicRectangle.cs" />
