--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
@@ -38,14 +38,19 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TinyIoC">
+      <HintPath>..\MPfm.Core\Lib\TinyIoC.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Basics\BasicImage.cs" />
     <Compile Include="Basics\BasicRectangle.cs" />
     <Compile Include="Basics\BasicColor.cs" />
     <Compile Include="Basics\BasicBrush.cs" />
     <Compile Include="Basics\BasicPen.cs" />
     <Compile Include="Basics\BasicPoint.cs" />
     <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Controls\WaveFormControl.cs" />
     <Compile Include="Controls\WaveFormScaleControl.cs" />
     <Compile Include="Controls\FaderControl.cs" />
     <Compile Include="Controls\IControl.cs" />
@@ -53,7 +58,7 @@
     <Compile Include="Graphics\IMemoryGraphicsContext.cs" />
     <Compile Include="Graphics\IGraphicsContext.cs" />
     <Compile Include="Graphics\IMemoryGraphicsContextFactory.cs" />
-    <Compile Include="Interaction\IControlInteraction.cs" />
+    <Compile Include="Interaction\IControlMouseInteraction.cs" />
     <Compile Include="Interaction\IControlTouchInteraction.cs" />
     <Compile Include="Managers\Events\LoadPeakFileEventArgs.cs" />
     <Compile Include="Managers\Events\GenerateWaveFormEventArgs.cs" />
@@ -68,6 +73,14 @@
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
       <Project>{d536fde5-989e-4979-9b39-63621ae4a205}</Project>
       <Name>MPfm.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.MVP\MPfm.MVP.csproj">
+      <Project>{B6B0613C-FF39-479D-9EF0-31DAF9684A06}</Project>
+      <Name>MPfm.MVP</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MPfm.Player\MPfm.Player.csproj">
+      <Project>{FEB7497C-784C-4380-874F-46FD93C82BA1}</Project>
+      <Name>MPfm.Player</Name>
     </ProjectReference>
     <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.csproj">
       <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
