WPF: Struggling just to make DataTemplate triggers work on marker cells. I gave up after two hours of a complete waste of time and managed to get a reference to child controls inside the cell template. WPF can be so tedious sometimes, it feels like you need to have the exact perfect recipe of 100 lines of XML just to make it work or nothing will happen. </rant>

--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Classes\Controls\TrackBar.cs" />
     <Compile Include="Classes\Controls\Fader.cs" />
     <Compile Include="Classes\Extensions\ExtensionMethods.cs" />
+    <Compile Include="Classes\Helpers\UIHelper.cs" />
     <Compile Include="Classes\Theme\GlobalTheme.cs" />
     <Compile Include="Classes\Controls\OutputMeter.cs" />
     <Compile Include="Classes\Controls\MPfmButton.cs" />
