WPF: Created a test control to debug drawing bitmaps on different threads; I think I finally found the solution.

--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -146,6 +146,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Controls\TestControl.cs" />
     <Compile Include="Classes\Controls\ImageButton.cs" />
     <Compile Include="Classes\Controls\HeaderImageButton.cs" />
     <Compile Include="Classes\Controls\Graphics\DisposableBitmap.cs" />
