--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -146,6 +146,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Controls\SongGridView.cs" />
     <Compile Include="Classes\Controls\TestControl.cs" />
     <Compile Include="Classes\Controls\ImageButton.cs" />
     <Compile Include="Classes\Controls\HeaderImageButton.cs" />
@@ -159,6 +160,8 @@
     <Compile Include="Classes\Controls\WaveFormScale.cs" />
     <Compile Include="Classes\Controls\TrackBar.cs" />
     <Compile Include="Classes\Controls\Fader.cs" />
+    <Compile Include="Classes\Controls\Wrappers\VerticalScrollBarWrapper.cs" />
+    <Compile Include="Classes\Controls\Wrappers\HorizontalScrollBarWrapper.cs" />
     <Compile Include="Classes\Extensions\ExtensionMethods.cs" />
     <Compile Include="Classes\Helpers\UIHelper.cs" />
     <Compile Include="Classes\Theme\GlobalTheme.cs" />
