WPF: Added all colors to SongGridViewTheme; now using the right colors everywhere. SongGridView can now start playback and receives update of currently playing song. Fixed bugs in GraphicsContextWrapper (rendering text in a rectangle).

--- a/MPfm/MPfm.WPF/MPfm.WPF.csproj
+++ b/MPfm/MPfm.WPF/MPfm.WPF.csproj
@@ -254,6 +254,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Resource Include="Resources\Fonts\Roboto-Bold.ttf" />
     <Resource Include="Resources\Fonts\RobotoCondensed-Bold.ttf" />
     <Resource Include="Resources\Fonts\RobotoCondensed-Light.ttf" />
     <Resource Include="Resources\Fonts\RobotoCondensed-Regular.ttf" />
