--- a/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
+++ b/MPfm/MPfm.GenericControls/MPfm.GenericControls.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Basics\BasicPen.cs" />
     <Compile Include="Basics\BasicPoint.cs" />
     <Compile Include="Basics\BasicGradientBrush.cs" />
+    <Compile Include="Graphics\IDisposableImageFactory.cs" />
     <Compile Include="Wrappers\IHorizontalScrollBarWrapper.cs" />
     <Compile Include="Wrappers\IVerticalScrollBarWrapper.cs" />
     <Compile Include="Controls\Songs\SongGridViewControl.cs" />
