--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -76,6 +76,8 @@
     <PackageSigningKey>3rd Party Mac Developer Installer</PackageSigningKey>
     <Externalconsole>True</Externalconsole>
     <UseSGen>False</UseSGen>
+    <I18n>
+    </I18n>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release_MacOSX|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -243,6 +245,9 @@
     <Compile Include="Classes\Helpers\CoreGraphicsHelper.cs" />
     <Compile Include="Classes\Controls\MPfmWaveFormScrollView.cs" />
     <Compile Include="Classes\Controls\MPfmRoundButton.cs" />
+    <Compile Include="Classes\Controls\Wrappers\HorizontalScrollBarWrapper.cs" />
+    <Compile Include="Classes\Controls\Wrappers\VerticalScrollBarWrapper.cs" />
+    <Compile Include="Classes\Controls\Graphics\DisposableImageFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
@@ -434,6 +439,7 @@
     <Folder Include="Classes\Controls\Helpers\" />
     <Folder Include="Resources\Toolbar\" />
     <Folder Include="Resources\Buttons\" />
+    <Folder Include="Classes\Controls\Wrappers\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
